# illi-ai-assistant

./: .gitignore  ACCEPT_PR.cmd  CLEANUP_AND_FIX.bat  CLEANUP_AND_FIX_FIXED.bat  CLEANUP_PROJECT.bat  CLEAN_GITHUB.bat  COMPLETE_GIT_RESET.bat  CREATE_PACKAGE_RELEASE.cmd  EMAIL_SETUP_GUIDE.txt  FINAL_FIXED_PUBLISH.cmd  FINAL_PUBLISH.cmd  FIXED_PUBLISH_PACKAGE.cmd  FIX_GIT.bat  FIX_GITHUB_README.cmd  FIX_GIT_SIMPLE.bat  FORCE_PUSH.cmd  FORK_REPOSITORY.cmd  GITHUB_MANUAL_COMMANDS.bat  GITHUB_PUBLISHING_GUIDE.md  GITHUB_PUSH_COMMANDS.md  GITHUB_PUSH_COMMANDS_FINAL.md  ILLI_AI_COMPLETE.py  ILLI_AI_COMPLETE_FUNCTIONAL.py  ILLI_AI_FINAL.py  ILLI_AI_LEARNING.py  ILLI_AI_PROFESSIONAL.py  ILLI_AI_PROFESSIONAL_FINAL.py  ILLI_AI_SIMPLE.py  ILLI_AI_SIMPLE_WORKING.py  ILLI_AI_WORKING.py  ILLI_AI_WORKING_FINAL.py  ILLI_AI_WORKING_FIXED.py  ILLI_PRO_MASTER.cmd  INSTALL_DEPENDENCIES.bat  LICENSE  LICENSE.md  LINKEDIN_POST_EXAMPLES.md  LINKEDIN_POST_MASTER_PROMPT.md  MANUAL_PROCESS_HANDLER.cmd  PROJECT_CLEANUP_SUMMARY.txt  (+74 more)
illi_ai/: setup.py
